fix(leasing-46): corriger les remarques de review (round 2)
- Remplacer ProductLeasing par LeasingArticle (evite la duplication sur product_leasing)
- Supprimer @Autowired : passer a @RequiredArgsConstructor + private final
- Supprimer @CrossOrigin (gere globalement)
- Creer DTOs ProductLeasingListResponse et LeasingCitiesResponse (remplace Map)
- Deplacer la logique de validation du DTO vers le service
- Ajouter @Transactional(readOnly = true) sur les methodes de lecture
- Remplacer .collect(Collectors.toList()) par .toList()
- Deplacer les logs du controller vers le service
- Tests : ajouter setControllerAdvice(CustomGlobalExceptionHandler) dans setUp()
- Tests : deplacer DateVilleFilterTest vers com.puericulture.leasing.service
- Tests : deplacer ProductLeasingControllerTest vers com.puericulture.leasing.controller

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>